feat: migrate bootstrap storage configuration